fixed the layout overflown issue

--- a/src/app/pages/job-details/job-details.component.scss
+++ b/src/app/pages/job-details/job-details.component.scss
@@ -22,11 +22,9 @@ tr.detail-row {
 
 .element-diagram {
   min-width: 80px;
-  padding: 8px;
-  margin: 8px 400px;
-  margin-left: 96px;
-  text-wrap: wrap;
-  // border: 1px solid #2b2c2d;
+  padding: 12px;
+  margin: 8px 0px;
+  border: 1px solid #2b2c2d;
 }
 
 // Status indicator styles
